<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".activity.ExerciseActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/difficulty"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        android:text="@string/leicht"
        android:textAlignment="center"
        android:background="#0f0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/name"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="@string/name1"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_background"
            android:layout_weight="5" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/design_default_color_secondary" />

        <TextView
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_background"
            android:text="@string/zeit"
            android:textSize="@dimen/text_medium"
            android:layout_weight="5" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/design_default_color_secondary" />

        <TextView
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_background"
            android:text="@string/anzahl"
            android:textSize="@dimen/text_medium"
            android:layout_weight="3" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/high_score_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>